# ingest

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  clean.sh  deploy.yaml  release.sh  remote-build.sh  run-local.sh  run.sh  rust-dev.yaml  setenv.sh
.github/workflows/: build.yaml
local/: run.sh
local/redpanda/: run.sh
redpanda/: docker-compose.yml  run.sh
src/: main.rs
