[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

#[profile.dev]
## Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
#panic = "abort"
#
#[profile.release]
#opt-level = "z"     # Optimize for size.
#lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = "abort"     # Abort on panic
#strip = true        # Automatically strip symbols from the binary.

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.37"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
libc = { version = "0.2", default-features = false }
rdkafka = { version = "0.36.2", default-features = false, features = ["tokio", "cmake-build"] }
rust-tradier = { git = "https://github.com/mentics/rust-tradier.git", branch = "main" }
# tokio = { version = "1.18", features = ["rt", "time"], optional = true }

# shared-types = { git = "https://github.com/mentics-online-ml/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
# series-store = { git = "https://github.com/mentics-online-ml/series-store.git", branch = "main" }
series-store = { path = "../series-store" }

